--- a/index.html
+++ b/index.html
@@ -24,57 +24,99 @@
     <main>
         <div id="about">
             <h1>My name is Anthony.</h1>
-            <h2>I am a web developer</h2>
+            <h2>I am a web developer.</h2>
             <br>
-            <h2>About me</h2>
+            <h2 class="section-title">About me</h2>
             <p>I have a structural engineering background but having a passion for coding, I have decided to become a web developer. I have been working intensly on online courses and personal projects to gain solid and effective developer skills.</p>
         </div>
         <div id="courses">
-            <h2>Courses</h2>
+            <h2 class="section-title">Courses</h2>
             <div class="courses-container">
-                <ul>
-                    <li>IT Career Switch</li>
-                    <li>Codecademy</li>
-                    <li>NEAR certified developer</li>
-                </ul>
+                <div class="courses-list">
+                    <ul>
+                        <li class="it-career-switch-btn">IT Career Switch</li>
+                        <li class="codecademy-btn">Codecademy</li>
+                        <li class="near-btn">NEAR developer</li>
+                    </ul>
+                </div>
                 <div class="course-content">
+                    <div class="it-career-switch">
+                        I am currently taking the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer:
+                        <ul class="custom-list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>PHP</li>
+                            <li>JQuery</li>
+                            <li>JavaScript</li>
+                            <li>...</li>
+                        </ul>
+                        It also involves two real-world projects to put into practise and showcase the skills learnt in the courses. 
+                    </div>
+                    <div class="codecademy">
+                        I am enrolled in numerous courses from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>:<br><br>Full Stack Engineer Career Path
+                        <ul class="custom-list">
+                            <li>JavaScript</li>
+                            <li>Node.JS</li>
+                            <li>SQL</li>
+                            <li>React</li>
+                            <li>...</li>
+                        </ul>
+                        Courses (25h each)
+                        <ul class="custom-list">
+                            <li>JQuery</li>
+                            <li>Python</li>
+                            <li>PHP</li>
+                            <li>Java</li>
+                            <li>C#</li>
+                        </ul>
+                    </div>
+                    <div class="near">
+                        I am taking the <a href="https://www.near.university/courses/near-certified-developer" target="_blank">Near certified developer </a> course
+                        <ul>
+                            <li>Read and wrote smart contract in Rust and AssemblyScript</li>
+                            <li>Tested contracts using unit and simulation tests</li>
+                            <li>Deployed contract on the blockchain</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
         <div id="projects">
-            <h2>Projects</h2>
+            <h2 class="section-title">Projects</h2>
             <div class="projects-container">
                 <div class="project-card">
-                    <h3>Django website</h3>
+                    <h3>Django website<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
+                    <ul>
+                        <li>Built a database website with user registration form and email verification using Django framework.</li>
+                        <li>Connected SQlite and Postgres databases to the website.</li>
+                        <li>Implemented navigation between pages and used Bootstrap and templates in the front-end.</li>
+                        <li>Performed continuous integration using Github workflow</li>
+                        <li>Tested the code with Coverage.</li>
+                    </ul>
                 </div>
                 <div class="project-card">
-                    <h3>Web 3.0 Application</h3>
+                    <h3>Web 3.0 Application<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
+                    <p>Designed a Web 3.0 application able to pair with Metamask, to send Ethereum through ERC20 blockchain network and to interact with smart contracts.</p>
+                    <ul>
+                        <li>Installed and built the React application using Vite.</li>
+                        <li>Tested the smart contracts with Hardhat.</li>
+                        <li>Deployed the smart contract on the blockchain using Alchemy.</li>
+                    </ul>
+                </div>
+                <div class="project-card sudoku">
+                    <h3>Sudoku game<a href="https://github.com/ap3120/sudoku/" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://gecko-sudoku.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <p>Created a sudoku game using in JavaScript. </p>
                 </div>
                 <div class="project-card">
-                    <h3>Sudoku game</h3>
+                    <h3>Password Generator<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
+                    <p>Built a random password generator in JavaScript</p>
                 </div>
                 <div class="project-card">
-                    <h3>Password Generator</h3>
-                </div>
-                <div class="project-card">
-                    <h3>Pancakeswap clone page</h3>
+                    <h3>Pancakeswap clone page<a href="https://github.com/ap3120/pancakeswap_clone" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
                 </div>
             </div>
         </div>
-        <a href="https://github.com/ap3120/">github.com/ap3120/</a>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
-        <p>test</p><br>
+        <a class="bot-link" href="https://github.com/ap3120/" target="_blank"><i class="fa-brands fa-github"></i></a>
     </main>
     <script src="./app.js"></script>
 </body>
