--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </nav>
     <main>
         <div id="about">
-            <h1>My name is Anthony.</h1>
-            <h2>I am a web developer.</h2>
+            <h1>I am Anthony,</h1>
+            <h2>web developer.</h2>
             <br>
             <h2 class="section-title">About me</h2>
             <p>I have a structural engineering background but having a passion for coding, I have decided to become a web developer. I have been working intensly on online courses and personal projects to gain solid and effective developer skills.</p>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="course-content">
                     <div class="it-career-switch">
-                        I am currently taking the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer:
+                        I have taken the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer:
                         <ul class="custom-list">
                             <li>HTML</li>
                             <li>CSS</li>
@@ -50,18 +50,17 @@
                             <li>JavaScript</li>
                             <li>...</li>
                         </ul>
-                        It also involves two real-world projects to put into practise and showcase the skills learnt in the courses. 
                     </div>
                     <div class="codecademy">
-                        I am enrolled in numerous courses from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a>:<br><br>Full Stack Engineer Career Path
+                        I have completed the Full Stack Engineer Career Path from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a> which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><br>
                         <ul class="custom-list">
                             <li>JavaScript</li>
                             <li>Node.JS</li>
-                            <li>SQL</li>
+                            <li>Database (PostgreSQL)</li>
                             <li>React</li>
                             <li>...</li>
                         </ul>
-                        Courses (25h each)
+                        I plan on completing the following courses as well (25h each):
                         <ul class="custom-list">
                             <li>JQuery</li>
                             <li>Python</li>
@@ -71,11 +70,10 @@
                         </ul>
                     </div>
                     <div class="near">
-                        I am taking the <a href="https://www.near.university/courses/near-certified-developer" target="_blank">Near certified developer </a> course
-                        <ul>
-                            <li>Read and wrote smart contract in Rust and AssemblyScript</li>
-                            <li>Tested contracts using unit and simulation tests</li>
-                            <li>Deployed contract on the blockchain</li>
+                        I am taking the <a href="https://www.near.university/courses/near-certified-developer" target="_blank">Near certified developer </a> course where I am learning how to write and test smart contracts using AssemblyScript, and how to deploy them on the Near blockchain.
+                        <ul class="custom-list">
+                            <li>React</li>
+                            <li>AssemblyScript</li>
                         </ul>
                     </div>
                 </div>
@@ -85,34 +83,34 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-container">
                 <div class="project-card">
-                    <h3>Django website<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
+                    <h3>Web 3.0 Application<a href="https://github.com/ap3120/ethApp" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://ethapp.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <p>Designed and deployed a Web 3.0 website able to pair with Metamask, to send Ethereum on the Goerli network and to interact with smart contracts.<br>The smart contracts were tested locally using Hardhat and deployed on Alchemy.</p>
+                    <ul class="card-list">
+                        <li>React</li>
+                        <li>Solidity</li>
+                    </ul>
+                </div>
+                <div class="project-card">
+                    <h3>Django database website</h3>
+                    <p>This is a Database website using the Django framework, where users can register and login to create lists and add or remove items from it.</p>
                     <ul>
-                        <li>Built a database website with user registration form and email verification using Django framework.</li>
                         <li>Connected SQlite and Postgres databases to the website.</li>
                         <li>Implemented navigation between pages and used Bootstrap and templates in the front-end.</li>
                         <li>Performed continuous integration using Github workflow</li>
                         <li>Tested the code with Coverage.</li>
                     </ul>
                 </div>
-                <div class="project-card">
-                    <h3>Web 3.0 Application<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
-                    <p>Designed a Web 3.0 application able to pair with Metamask, to send Ethereum through ERC20 blockchain network and to interact with smart contracts.</p>
-                    <ul>
-                        <li>Installed and built the React application using Vite.</li>
-                        <li>Tested the smart contracts with Hardhat.</li>
-                        <li>Deployed the smart contract on the blockchain using Alchemy.</li>
-                    </ul>
-                </div>
                 <div class="project-card sudoku">
                     <h3>Sudoku game<a href="https://github.com/ap3120/sudoku/" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://gecko-sudoku.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
-                    <p>Created a sudoku game using in JavaScript. </p>
+                    <p>Created a sudoku game using plain CSS and JavaScript.</p>
                 </div>
                 <div class="project-card">
-                    <h3>Password Generator<a href="#" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
-                    <p>Built a random password generator in JavaScript</p>
-                </div>
-                <div class="project-card">
-                    <h3>Pancakeswap clone page<a href="https://github.com/ap3120/pancakeswap_clone" target="_blank"><i class="fa-brands fa-github"></i></a></h3>
+                    <h3>Pancakeswap clone<a href="https://github.com/ap3120/pancakeswap_clone" target="_blank"><i class="fa-brands fa-github"></i></a><a href="https://ap3120.github.io/pancakeswap_clone/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <p>I created this static webpage that replicates the frontend of the <a href="https://pancakeswap.finance/" target="_blank">Pancake swap</a> official website when I was learning CSS.</p>
+                    <ul class="card-list">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
                 </div>
             </div>
         </div>
