--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <main>
         <div id="about">
             <h1>I am Anthony,</h1>
-            <h2>web developer.</h2>
+            <h2>Web developer.</h2>
             <br>
-            <h2 class="section-title">About me</h2>
+            <h2 class="section-title"><i class="fa-regular fa-address-card"></i> About me</h2>
             <p>I have a structural engineering background but having a passion for coding, I have decided to become a web developer. I have been working intensly on online courses and personal projects to gain solid and effective developer skills.</p>
         </div>
         <div id="courses">
-            <h2 class="section-title">Courses</h2>
+            <h2 class="section-title"><i class="fa-solid fa-graduation-cap"></i> Courses</h2>
             <div class="courses-container">
                 <div class="courses-list">
                     <ul>
@@ -80,10 +80,11 @@
             </div>
         </div>
         <div id="projects">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title"><i class="fa-solid fa-laptop-code"></i> Projects</h2>
             <div class="projects-container">
                 <div class="project-card">
                     <h3>Web 3.0 Application<a href="https://github.com/ap3120/ethApp" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://ethapp.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <img src="./ethapp.png" alt="ethApp website" width="300px">
                     <p>Designed and deployed a Web 3.0 website able to pair with Metamask, to send Ethereum on the Goerli network and to interact with smart contracts.<br>The smart contracts were tested locally using Hardhat and deployed on Alchemy.</p>
                     <ul class="card-list">
                         <li>React</li>
@@ -102,10 +103,12 @@
                 </div>
                 <div class="project-card sudoku">
                     <h3>Sudoku game<a href="https://github.com/ap3120/sudoku/" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://gecko-sudoku.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <img src="./sudoku.png" alt="sudoku" width="300px">
                     <p>Created a sudoku game using plain CSS and JavaScript.</p>
                 </div>
                 <div class="project-card">
                     <h3>Pancakeswap clone<a href="https://github.com/ap3120/pancakeswap_clone" target="_blank"><i class="fa-brands fa-github"></i></a><a href="https://ap3120.github.io/pancakeswap_clone/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
+                    <img src="pancakeswap.png" alt="pancake swap" width="300px">
                     <p>I created this static webpage that replicates the frontend of the <a href="https://pancakeswap.finance/" target="_blank">Pancake swap</a> official website when I was learning CSS.</p>
                     <ul class="card-list">
                         <li>HTML</li>
