--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav>
-        <img src="logo.png" alt="logo" height="45px">
+        <img src="./images/logo.png" alt="logo" height="45px">
         <ul>
-            <li><a href="#about">About</a></li>
+            <li><a href="#top">Home</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#projects">Projects</a></li>
         </ul>
@@ -23,114 +23,53 @@
             <div class="bot"></div>
         </div>
     </nav>
+    
     <main>
-        <div id="about">
-            <h1>I am Anthony,</h1>
-            <h2>Web developer.</h2>
-            <br>
-            <h2 class="section-title"><i class="fa-regular fa-address-card"></i> About me</h2>
-            <div class="background">
-                <div class="background-text">
-                    <h3>My background</h3>
-                    <p>I have a structural engineering background with a Master degree completed at Imperial College London in 2021. I have then worked for a year at <a href="https://www.meinhardt.co.uk/" target="_blank">Meinhardt UK</a> on large scale multidisciplinary projects accross the UK.</p>
-                </div>
-                <img src="structural-engineer.png" alt="structural engineer" width="300px" data-tilt>
-            </div>
-            <div class="web-dev">
-                <div class="web-dev-text">
-                    <h3>What I am looking for</h3>
-                    <p>Although I have enjoyed working as a structural engineer, I have a passion for coding, and I have decided to change my career path to become a web developer. I have been working intensly on online courses and personal projects to gain solid and effective developer skills.</p>
-                </div>
-                <img src="web-dev.png" alt="web dev" width="300px" data-tilt>
-            </div>
+        <div id='top'></div>
+        <div id="home">
+            <h1>Hi there, <span>I am Anthony,</span></h1>
+            <h2>Full stack web developer.</h2>
+            <img src="./images/web-dev.png" alt="web dev" >
         </div>
         <div id="courses">
             <h2 class="section-title"><i class="fa-solid fa-graduation-cap"></i> Courses</h2>
-            <div class="courses-container">
-                <div class="courses-list">
-                    <ul>
-                        <li class="it-career-switch-btn">IT Career Switch</li>
-                        <li class="codecademy-btn">Codecademy</li>
-                        <li class="near-btn">NEAR developer</li>
-                    </ul>
+            <div class='course'>
+                <input type='checkbox' id ='collapsible-head-1'>
+                <label for='collapsible-head-1'>
+                    <p>IT Career Switch</p>
+                    <div class='plus'>
+                        <div class='vert'></div>
+                        <div class='hor'></div>
+                    </div>
+                </label>
+                <div class='course-detail'>
+                    <p>
+                        I have taken the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer. This program involves two real world projects assigned by a tutor as well as various courses from Codecademy.
+                    </p>
                 </div>
-                <div class="course-content">
-                    <div class="it-career-switch">
-                        I have taken the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer:
-                        <ul class="custom-list">
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>PHP</li>
-                            <li>JQuery</li>
-                            <li>JavaScript</li>
-                            <li>...</li>
-                        </ul>
-                    </div>
-                    <div class="codecademy">
+            </div>
+            <div class='course'>
+                <input type='checkbox' id ='collapsible-head-2'>
+                <label for='collapsible-head-2'>Codecademy Full Stack Career path</label>
+                <div class='course-detail'>
+                    <p>
                         I have completed the Full Stack Engineer Career Path from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a> which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><br>
-                        <ul class="custom-list">
-                            <li>JavaScript</li>
-                            <li>Node.JS</li>
-                            <li>Database (PostgreSQL)</li>
-                            <li>React</li>
-                            <li>...</li>
-                        </ul>
-                        I plan on completing the following courses as well (25h each):
-                        <ul class="custom-list">
-                            <li>JQuery</li>
-                            <li>Python</li>
-                            <li>PHP</li>
-                            <li>Java</li>
-                            <li>C#</li>
-                        </ul>
-                    </div>
-                    <div class="near">
-                        I am taking the <a href="https://www.near.university/courses/near-certified-developer" target="_blank">Near certified developer </a> course where I am learning how to write and test smart contracts using AssemblyScript, and how to deploy them on the Near blockchain.
-                        <ul class="custom-list">
-                            <li>React</li>
-                            <li>AssemblyScript</li>
-                        </ul>
-                    </div>
+                    </p>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>Node.JS</li>
+                        <li>React</li>
+                        <li>Redux</li>
+                        <li>HTTP requests</li>
+                        <li>Database (PostgreSQL)</li>
+                        <li>And more...</li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div id="projects">
             <h2 class="section-title"><i class="fa-solid fa-laptop-code"></i> Projects</h2>
-            <div class="projects-container">
-                <div class="project-card">
-                    <h3>Web 3.0 Application<a href="https://github.com/ap3120/ethApp" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://ethapp.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
-                    <img src="./ethapp.png" alt="ethApp website" width="300px">
-                    <p>Designed and deployed a Web 3.0 website able to pair with Metamask, to send Ethereum on the Goerli network and to interact with smart contracts.<br>The smart contracts were tested locally using Hardhat and deployed on Alchemy.</p>
-                    <ul class="card-list">
-                        <li>React</li>
-                        <li>Solidity</li>
-                    </ul>
-                </div>
-                <div class="project-card">
-                    <h3>Django database website</h3>
-                    <p>This is a Database website using the Django framework, where users can register and login to create lists and add or remove items from it.</p>
-                    <ul>
-                        <li>Connected SQlite and Postgres databases to the website.</li>
-                        <li>Implemented navigation between pages and used Bootstrap and templates in the front-end.</li>
-                        <li>Performed continuous integration using Github workflow</li>
-                        <li>Tested the code with Coverage.</li>
-                    </ul>
-                </div>
-                <div class="project-card sudoku">
-                    <h3>Sudoku game<a href="https://github.com/ap3120/sudoku/" target="_blank"><i class="fa-brands fa-github"></i></a><a href="http://gecko-sudoku.herokuapp.com/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
-                    <img src="./sudoku.png" alt="sudoku" width="300px">
-                    <p>Created a sudoku game using plain CSS and JavaScript.</p>
-                </div>
-                <div class="project-card">
-                    <h3>Pancakeswap clone<a href="https://github.com/ap3120/pancakeswap_clone" target="_blank"><i class="fa-brands fa-github"></i></a><a href="https://ap3120.github.io/pancakeswap_clone/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a></h3>
-                    <img src="pancakeswap.png" alt="pancake swap" width="300px">
-                    <p>I created this static webpage that replicates the frontend of the <a href="https://pancakeswap.finance/" target="_blank">Pancake swap</a> official website when I was learning CSS.</p>
-                    <ul class="card-list">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                    </ul>
-                </div>
-            </div>
+            <div class="projects-container"></div>
         </div>
     </main>
     <footer>
@@ -138,6 +77,8 @@
         <p>Copyright &copy; 2022 All Rights Reserved</p>
     </footer>
     <script src="./app.js"></script>
-    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script>
+        
+    </script>
 </body>
 </html>
