--- a/index.html
+++ b/index.html
@@ -44,16 +44,22 @@
                 </label>
                 <div class='course-detail'>
                     <p>
-                        I have taken the coding traineeship from <a href = "https://itcareerswitch.co.uk/coding-traineeship/" target="_blank">IT Career Switch</a> which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer. This program involves two real world projects assigned by a tutor as well as various courses from Codecademy.
+                        I have taken the coding traineeship from IT Career Switch which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer. This program involves two real world projects assigned by a tutor as well as various courses from Codecademy.
                     </p>
                 </div>
             </div>
             <div class='course'>
                 <input type='checkbox' id ='collapsible-head-2'>
-                <label for='collapsible-head-2'>Codecademy Full Stack Career path</label>
+                <label for='collapsible-head-2'>
+                    <p>Codecademy Full Stack Career path</p>
+                    <div class='plus'>
+                        <div class='vert'></div>
+                        <div class='hor'></div>
+                    </div>
+                </label>
                 <div class='course-detail'>
                     <p>
-                        I have completed the Full Stack Engineer Career Path from <a href="https://www.codecademy.com/" target="_blank">Codecademy</a> which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><br>
+                        I have completed the Full Stack Engineer Career Path from Codecademy which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><br>
                     </p>
                     <ul>
                         <li>JavaScript</li>
