--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div id="courses">
             <h2 class="section-title"><i class="fa-solid fa-graduation-cap"></i> Courses</h2>
+            <p class='section-text'>Click for more details.</p>
             <div class='course'>
                 <input type='checkbox' id ='collapsible-head-1'>
                 <label for='collapsible-head-1'>
