--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#top">Home</a></li>
             <li><a href="#courses">Courses</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <a href="https://github.com/ap3120/" target="_blank"><i class="fa-brands fa-github"></i></a>
         <div class="burger">
@@ -77,6 +78,10 @@
         <div id="projects">
             <h2 class="section-title"><i class="fa-solid fa-laptop-code"></i> Projects</h2>
             <div class="projects-container"></div>
+        </div>
+        <div id='contact'>
+            <h2 class="section-title"><i class="fa-regular fa-comments"></i> Contact</h2>
+            <p class='section-text'>anthony-dev22@proton.me</p>
         </div>
     </main>
     <footer>
