--- a/index.html
+++ b/index.html
@@ -34,46 +34,32 @@
         </div>
         <div id="courses">
             <h2 class="section-title"><i class="fa-solid fa-graduation-cap"></i> Courses</h2>
-            <p class='section-text'>Click for more details.</p>
-            <div class='course'>
-                <input type='checkbox' id ='collapsible-head-1'>
-                <label for='collapsible-head-1'>
-                    <p>IT Career Switch</p>
-                    <div class='plus'>
-                        <div class='vert'></div>
-                        <div class='hor'></div>
-                    </div>
-                </label>
-                <div class='course-detail'>
+            <ul>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>IT Career Switch</h3>
                     <p>
                         I have taken the coding traineeship from IT Career Switch which provided me with sound knowledge in full stack development to build my own websites and applications. The course covers the essential programming languages and technologies to start a role as a web developer. This program involves two real world projects assigned by a tutor as well as various courses from Codecademy.
                     </p>
-                </div>
-            </div>
-            <div class='course'>
-                <input type='checkbox' id ='collapsible-head-2'>
-                <label for='collapsible-head-2'>
-                    <p>Codecademy Full Stack Career path</p>
-                    <div class='plus'>
-                        <div class='vert'></div>
-                        <div class='hor'></div>
-                    </div>
-                </label>
-                <div class='course-detail'>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy Full Stack Engineer Career Path</h3>
                     <p>
-                        I have completed the Full Stack Engineer Career Path from Codecademy which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><br>
+                    I have completed the Full Stack Engineer Career Path from Codecademy which enabled me to extend my understanding of frontend and backend development and how to connect the two.<br><span style='font-weight: bold;'>Javascript - NodeJS - React - Redux - ExpressJS - Database(Postgres) ...</span>
                     </p>
-                    <ul>
-                        <li>JavaScript</li>
-                        <li>Node.JS</li>
-                        <li>React</li>
-                        <li>Redux</li>
-                        <li>HTTP requests</li>
-                        <li>Database (PostgreSQL)</li>
-                        <li>And more...</li>
-                    </ul>
-                </div>
-            </div>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy Python 3 Course</h3>
+                    <p style = 'font-weight: bold;'>
+                    Control flow - Lists - Loops - Functions - Strings - Modules - Dictionaries - Files - Classes
+                    </p>
+                </li>
+            </ul>
         </div>
         <div id="projects">
             <h2 class="section-title"><i class="fa-solid fa-laptop-code"></i> Projects</h2>
@@ -84,13 +70,6 @@
             <p class='section-text'>anthony-dev22@proton.me</p>
         </div>
     </main>
-    <footer>
-        <hr>
-        <p>Copyright &copy; 2022 All Rights Reserved</p>
-    </footer>
     <script src="./app.js"></script>
-    <script>
-        
-    </script>
 </body>
 </html>
