--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </nav>
     
     <main>
-        <div id='top'></div>
         <div id="home">
             <h1>Hi there, <span>I am Anthony,</span></h1>
             <h2>Full stack web developer.</h2>
@@ -57,6 +56,38 @@
                     <h3>Codecademy Python 3 Course</h3>
                     <p style = 'font-weight: bold;'>
                     Control flow - Lists - Loops - Functions - Strings - Modules - Dictionaries - Files - Classes
+                    </p>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy JQuery course</h3>
+                    <p style = 'font-weight: bold;'>
+                    Effects - Event handlers - Style Methods - DOM
+                    </p>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy PHP Course</h3>
+                    <p style = 'font-weight: bold;'>
+                    Variables - Functions - Arrays - Form handling - Conditionals and Logic - Loops - Form Validation - Classes and Objects
+                    </p>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy Java Course</h3>
+                    <p style = 'font-weight: bold;'>
+                    Variables - Object-Oriented Java - Conditionals and Control flow - Arrays and ArrayLists - Loops - String Methods - Access, Encapsulation and Static methods - Inheritance and Polymorphism - Debugging - Two dimensional Arrays
+                    </p>
+                </li>
+                <li>
+                    <input type='checkbox' checked>
+                    <i></i>
+                    <h3>Codecademy C# Course</h3>
+                    <p style = 'font-weight: bold;'>
+                    Data types and Variables - Logic and Conditionals - Methods - Arrays and Loops - Classes and Objects - Interfaces and Inheritance - References - Lists and LINQ
                     </p>
                 </li>
             </ul>
